# motion

./: .gitignore  Cargo.toml  README.md  concat.sh
src/: main.rs  motion_renderer.rs  x264_presets.rs
